Use padding-top on section headings to avoid margin collapse
Made-with: Cursor

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,7 +54,8 @@ h2.nolink-title {
 /* Underline publication category section headings */
 h2.publication-category-title {
   text-decoration: underline;
-  margin-top: 4em;
+  margin-top: 0;
+  padding-top: 3em;
   margin-bottom: 0;
 }
 
